--- a/src/components/atoms/Input/style.scss
+++ b/src/components/atoms/Input/style.scss
@@ -1,8 +1,8 @@
 .defaultInput {
     background-color: transparent !important;
-    color: white !important;
+    color: rgb(142, 83, 83) !important;
 
     &::placeholder {
-        color: white !important;
+        color: rgb(171, 82, 82) !important;
     }
 }
