--- a/src/components/templates/LandingTemplate/style.scss
+++ b/src/components/templates/LandingTemplate/style.scss
@@ -1,17 +1,6 @@
 .landingTemplateContainer {
-    background: linear-gradient(320deg, #f27121, #e94057, #8a2387);
-    min-height: 100vh;
+    background: linear-gradient(0deg, rgba(35, 66, 98, 1) 0%, rgb(171, 224, 248) 100%);
     position: relative;
     display: flex;
     flex-direction: column;
-    // justify-content: space-around;
-
-    .searchWrapper {
-        background: rgba(255, 255, 255, 0.19);
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        padding-top: 1em;
-    }
 }
