--- a/src/components/atoms/Input/style.scss
+++ b/src/components/atoms/Input/style.scss
@@ -4,6 +4,6 @@
     border: 1px solid black !important;
 
     &::placeholder {
-        color: white !important;
+        color: rgb(0, 0, 0) !important;
     }
 }
