--- a/src/components/templates/LandingTemplate/style.scss
+++ b/src/components/templates/LandingTemplate/style.scss
@@ -1,10 +1,12 @@
+@import '../../../styles/index.scss';
+
 .landingTemplateContainer {
     background-image: url('../../../assets/images/wave.svg');
     background-repeat: no-repeat;
     background-size: cover;
     border-bottom-left-radius: 0% 10%;
     height: 500px;
-    color: rgb(0, 0, 0);
+    color: $primaryColor;
     font-weight: bold;
     position: relative;
     display: flex;
