--- a/src/components/molecules/StatisticsBox/style.scss
+++ b/src/components/molecules/StatisticsBox/style.scss
@@ -1,5 +1,5 @@
 .statisticsBox {
-    background-color: #F8FAFE !important;
+    background-color: #fafafd !important;
     border: none !important;
     text-align: center;
     padding: 50px;
@@ -10,7 +10,7 @@
         backdrop-filter: blur(0px);
         -webkit-backdrop-filter: blur(0px);
         border-radius: 10px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
+        border: 1px solid rgba(141, 141, 141, 0.18);
         transform: translate(0px, -20px);
         transition: all 1s;
     }
