--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&family=Open+Sans:wght@300;400&display=swap');
-$fontFamily: 'Nunito Sans', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+$fontFamily: 'Montserrat', sans-serif;
