Design for login and register finished

--- a/src/components/atoms/Input/style.scss
+++ b/src/components/atoms/Input/style.scss
@@ -1,7 +1,7 @@
 .defaultInput {
     background-color: transparent !important;
     color: white !important;
-    border: 1px solid black !important;
+    border: 1px solid rgb(204, 204, 204) !important;
 
     &::placeholder {
         color: rgb(0, 0, 0) !important;
